# update-your-kit

./: .gitignore  README.md  script
counter/: Cargo.toml  index.html
cw-to-do-list/src/: contract.rs
diao-na-xing/: Cargo.toml
diao-na-xing/src/: app.rs  crud.rs  main.rs  splash.rs
drumstick/: Cargo.toml
drumstick/src/: api.rs  crud.rs  main.rs  models.rs
jace-in-winter/: Cargo.toml
jace-in-winter/src/: lib.rs
lendingahand/: .gitignore  Cargo.toml  NOTICE
lendingahand/schema/: lendingahand.json
lendingahand/schema/raw/: execute.json  query.json  (+1 more)
lendingahand/src/: contract.rs  helpers.rs  integration_tests.rs  msg.rs  state.rs
lepcounter/src/: lib.rs
light-to-lighting-rock/: ligh.tflite  light.h5  light.keras  re.txt
light-to-lighting-rock/.ipynb_checkpoints/: thank-you-asian-checkpoint.ipynb
music-go-go-go/: Cargo.toml
no-gym-rat/: test-metal-in-gym.ipynb
no-gym-rat/.ipynb_checkpoints/: gym_is_not_for_me-checkpoint.ipynb
no-gym-rat/test-gym/: Racing-in-the-gym.ipynb  Untitled.ipynb  requirements.txt
playing-drum/: Cargo.toml
playing-drum/src/: main.rs
slick-git/: Cargo.toml
squat-to-waste-is-humane/: LICENSE_MIT
squat-to-waste-is-humane/src/: style.css
squat-to-waste-is-humane/static/: index.html
tf-cv-rum-drop/: binary.py  request.txt
yell-at-thou/: Cargo.toml  index.html
yell-at-thou/src/: app.rs
yell-at-thou/src/components/: animation.rs  goods.rs  landing.rs  loading.rs  mod.rs  move.rs
yell-at-thou/src/pages/: goods_page.rs  landing.rs  landing_page.rs  mod.rs
zero-to-ein/: requirements.txt  tokapot.ipynb
(+3 files in other folders)
