[package]
name = "jace-in-winter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.2"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"

[lib]
name = "hellowhitewalker"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []