[package]
name = "slick-git"
version = "0.1.0"
authors = ["itpofy2024o <qweasdzxcf1G@proton.me>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"

[build-dependencies]
slint-build = "1.6"
