[package]
name = "yell-at-thou"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
wasm-bindgen = "0.2"
gloo = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement"] }